<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/roomsFragment"
        android:icon="@drawable/ic_nav_rooms"
        android:title="@string/nav_rooms" />
    <item
        android:id="@+id/tenantsFragment"
        android:icon="@drawable/ic_nav_tenants"
        android:title="@string/nav_tenants" />
    <item
        android:id="@+id/billsFragment"
        android:icon="@drawable/ic_nav_bills"
        android:title="@string/nav_bills" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
